# novstar

./: .gitignore  Cargo.toml  deploy.sh  index.html
.github/workflows/: deploy.yml
assets/: dash-board-dxh181557ab1b99022.css  loading-dxh45fba8d57161775f.css  novstar_gui-dxh27a4c29882858c64.js  novstar_gui-dxh28eb2d9e3afe33c.js  novstar_gui-dxh2cd6bcd19e4ba5cd.js  novstar_gui-dxh392730441c9ab4c6.js  novstar_gui-dxh3e6c2184f313a3b0.js  novstar_gui-dxh4811e15a65bfc657.js  novstar_gui-dxh7f8b9527c8f83bb8.js  novstar_gui-dxh86f5dc216b542f21.js  novstar_gui-dxh8e6122c4a737ea.js  novstar_gui-dxh914bc33fc56e2e.js  novstar_gui-dxhd72b322ea9253475.js  novstar_gui-dxhdd38e0603c2e113.js  novstar_gui-dxhfa4c1953ad74d3.js  novstar_gui_bg-dxh1bf6c41bcb6f43bb.wasm  novstar_gui_bg-dxh2c94bbedf928ffe9.wasm  novstar_gui_bg-dxh34343c5e1f0b9f4.wasm  novstar_gui_bg-dxh66dd3745f90f118.wasm  novstar_gui_bg-dxh898e6f50a5c34230.wasm  novstar_gui_bg-dxh9da4c6b6222888ba.wasm  novstar_gui_bg-dxha7d67528277d95d3.wasm  novstar_gui_bg-dxhb18e1e829ee2d0bf.wasm  novstar_gui_bg-dxhd35f152cb1b36efd.wasm  novstar_gui_bg-dxhd5ba8144d326a228.wasm  novstar_gui_bg-dxhd747b5cace4347f.wasm  novstar_gui_bg-dxhe2bbb0e99115d72b.wasm  novstar_gui_bg-dxhe7ea077b886c3f.wasm  result-dxhd82451f4ef548be.css  search-dxhd4c150cc88b5f630.css
gui/: .gitignore  Cargo.toml  Dioxus.toml
gui/assets/: dash-board.css  loading.css  result.css  search.css
gui/src/: download.rs  main.rs  search.rs  sleep.js
src/: create_table.sql  data.rs  engine.rs  insert2.sql  insert3.sql  insert_comment3.sql  insert_comment4.sql  lib.rs  sentence.rs  tag.rs
