[workspace]
members=["./","gui"]

[package]
name = "scan"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
eyre = "0.6.12"
fuzzy-matcher = "0.3.7"
ollama-rs = "0.3.2"
# rusqlite = { version = "0.37.0", features = ["bundled"] ,optional=true}
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"], optional = true }
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] ,optional=true}
zstd = "0.13.3"

[features]
native=["sqlx","tokio"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
