[package]
name = "scan_gui"
version = "0.1.0"
authors = ["Dangerise <dangerise@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.1"
dioxus = { version = "0.6.0" }
dioxus-logger = "0.7.0"
js-sys = "0.3.82"
scan={path="../"}
web-sys = { version = "0.3.82", features = ["Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement", "Document", "Window"] }
web-time = "1.1.0"
zstd = "0.13.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
