[package]
name = "scan_gui"
version = "0.1.0"
authors = ["Dangerise <dangerise@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.1"
dioxus = { version = "0.7.0" }
enum-extract-error = "0.1.1"
enum-extract-macro = "0.1.1"
futures-util = "0.3.31"
human_bytes = { version = "0.4.3", features = ["si-units"] }
js-sys = "0.3.82"
reqwest = { version = "0.12.24", features = ["stream"] }
scan={path="../"}
web-sys = { version = "0.3.82", features = ["Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement", "Document", "Window"] }
web-time = "1.1.0"
zstd = "0.13.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
