[package]
name = "novstar_gui"
version = "0.1.0"
edition = "2024"
authors = ["Dangerise <dangerise@qq.com>"]
description = "The GUI of Novstar"
license = "MIT"
repository = "https://github.com/Dangerise/northstar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.1"
dioxus = { version = "0.7.1" }
enum-extract-error = "0.1.1"
enum-extract-macro = "0.1.1"
futures-util = "0.3.31"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
human_bytes = { version = "0.4.3", features = ["si-units"] }
js-sys = "0.3.82"
novstar = { path = "../" }
reqwest = { version = "0.12.24", features = ["stream"] }
web-sys = { version = "0.3.82", features = [
  "Blob",
  "BlobPropertyBag",
  "Document",
  "HtmlAnchorElement",
  "Url",
  "Window",
] }
web-time = "1.1.0"
zstd = "0.13.3"

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
web = ["dioxus/web"]
